split out htmal, css and js into their own files

--- a/example-chart.html
+++ b/example-chart.html
@@ -20,7 +20,7 @@ body {
 
 .line {
   fill: none;
-  stroke: steelblue;
+  stroke: steelblue; /* sets line to blue?*/
   stroke-width: 1.5px;
 }
 
@@ -29,6 +29,7 @@ body {
   pointer-events: all;
 }
 
+/* styles for the circle when you hover*/
 .focus circle {
   fill: none;
   stroke: steelblue;
