added chart to htmal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <h1> Apple Stock Chart </h1>
   <p>The following chart was adapted from Mike Bostock.</p>
   <a href="example-chart.html">Link to example D3 chart!</a>
+
+<div id="apple-stock-chart" class="chart"></dix>
+
 </body>
 
 </html>
