added chart to htmal

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <p>The following chart was adapted from Mike Bostock.</p>
   <a href="example-chart.html">Link to example D3 chart!</a>
 
-<div id="apple-stock-chart" class="chart"></dix>
+<div id="apple-stock-chart" class="chart"></div>
+
+
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src='scripts/chart.js'></script>
 
 </body>
 
